# jgi-globus-timer

./: README.rst  pyproject.toml
jgi_globus_timer/: globus_helpers.py  main.py
tests/: test_jgi_globus_timer.py
