[tool.poetry]
name = "jgi-globus-timer"
version = "0.1.0"
description = ""
authors = ["Mario Melara <maamelara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
globus-sdk = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
